🎨 Fix card preview sizing - ridotte dimensioni per fit container

--- a/public/promo-creator.html
+++ b/public/promo-creator.html
@@ -157,7 +157,8 @@
             border-radius: 1.5rem;
             padding: 2rem;
             color: white;
-            min-height: 500px;
+            height: fit-content;
+            max-width: 100%;
             display: flex;
             flex-direction: column;
             box-shadow: 0 20px 40px rgba(0,0,0,0.2);
@@ -177,7 +178,7 @@
 
         .preview-image-container {
             width: 100%;
-            height: 300px;
+            height: 200px;
             background: rgba(255,255,255,0.1);
             border-radius: 1rem;
             margin-bottom: 1.5rem;
@@ -203,28 +204,28 @@
         }
 
         .preview-title {
-            font-size: 2rem;
+            font-size: 1.5rem;
             font-weight: 800;
-            margin-bottom: 1rem;
+            margin-bottom: 0.75rem;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
         }
 
         .preview-description {
-            font-size: 1.125rem;
+            font-size: 1rem;
             opacity: 0.95;
-            margin-bottom: 1.5rem;
+            margin-bottom: 1rem;
             line-height: 1.6;
         }
 
         .preview-price {
-            font-size: 3rem;
+            font-size: 2.5rem;
             font-weight: 900;
             margin-bottom: 0.5rem;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
         }
 
         .preview-original-price {
-            font-size: 1.25rem;
+            font-size: 1.125rem;
             text-decoration: line-through;
             opacity: 0.7;
             margin-bottom: 1rem;
@@ -233,10 +234,10 @@
         .preview-cta {
             background: #fbbf24;
             color: #1e3a8a;
-            padding: 1.25rem 2.5rem;
+            padding: 1rem 2rem;
             border-radius: 3rem;
             font-weight: 700;
-            font-size: 1.25rem;
+            font-size: 1.125rem;
             border: none;
             cursor: pointer;
             box-shadow: 0 10px 30px rgba(251, 191, 36, 0.4);
