--- a/public/promo-creator.html
+++ b/public/promo-creator.html
@@ -155,33 +155,35 @@
             position: relative;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             border-radius: 1.5rem;
-            padding: 2rem;
+            padding: 1.5rem;
             color: white;
             height: fit-content;
             max-width: 100%;
             display: flex;
             flex-direction: column;
             box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+            transform: scale(0.85);
+            transform-origin: top center;
         }
 
         .preview-badge {
             position: absolute;
-            top: 1.5rem;
-            right: 1.5rem;
+            top: 1rem;
+            right: 1rem;
             background: rgba(255,255,255,0.2);
             backdrop-filter: blur(10px);
-            padding: 0.5rem 1rem;
+            padding: 0.375rem 0.75rem;
             border-radius: 2rem;
-            font-size: 0.875rem;
+            font-size: 0.75rem;
             font-weight: 600;
         }
 
         .preview-image-container {
             width: 100%;
-            height: 200px;
+            height: 160px;
             background: rgba(255,255,255,0.1);
             border-radius: 1rem;
-            margin-bottom: 1.5rem;
+            margin-bottom: 1rem;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -204,40 +206,40 @@
         }
 
         .preview-title {
-            font-size: 1.5rem;
+            font-size: 1.25rem;
             font-weight: 800;
-            margin-bottom: 0.75rem;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-        }
-
-        .preview-description {
-            font-size: 1rem;
-            opacity: 0.95;
-            margin-bottom: 1rem;
-            line-height: 1.6;
-        }
-
-        .preview-price {
-            font-size: 2.5rem;
-            font-weight: 900;
             margin-bottom: 0.5rem;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
         }
 
+        .preview-description {
+            font-size: 0.9rem;
+            opacity: 0.95;
+            margin-bottom: 0.75rem;
+            line-height: 1.5;
+        }
+
+        .preview-price {
+            font-size: 2rem;
+            font-weight: 900;
+            margin-bottom: 0.25rem;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+        }
+
         .preview-original-price {
-            font-size: 1.125rem;
+            font-size: 1rem;
             text-decoration: line-through;
             opacity: 0.7;
-            margin-bottom: 1rem;
+            margin-bottom: 0.75rem;
         }
 
         .preview-cta {
             background: #fbbf24;
             color: #1e3a8a;
-            padding: 1rem 2rem;
+            padding: 0.875rem 1.5rem;
             border-radius: 3rem;
             font-weight: 700;
-            font-size: 1.125rem;
+            font-size: 1rem;
             border: none;
             cursor: pointer;
             box-shadow: 0 10px 30px rgba(251, 191, 36, 0.4);
