--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1019,15 +1019,24 @@
                             <h4>🎁 Promozioni e Offerte</h4>
                             <p class="company-card-description">Crea promozioni professionali con landing page dedicata</p>
                         </div>
-                        <button class="btn-success" onclick="window.location.href='/public/promo-creator.html'">
-                            <i class="fas fa-magic"></i> Crea Nuova Promo
-                        </button>
+                        <div style="display: flex; gap: 10px;">
+                            <button class="btn-success" onclick="window.location.href='/public/promo-creator.html'">
+                                <i class="fas fa-magic"></i> Crea Promo Card
+                            </button>
+                            <button class="btn-success" onclick="window.location.href='/public/landing-builder.html'" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+                                <i class="fas fa-layer-group"></i> Crea Landing Page
+                            </button>
+                        </div>
                     </div>
                     <div class="company-card-body">
                         <div id="promotions-grid"></div>
                         <div class="info-box info-box-blue" style="margin-top: 20px;">
                             <p class="info-text">
                                 <i class="fas fa-lightbulb icon-margin"></i>
+                                <strong>Nuovo!</strong><br>
+                                Crea landing page professionali con 3 template pronti: scegli il layout, clicca sulle sezioni per editare e pubblica in pochi minuti!
+                            </p>
+                        </div>
                                 <strong>Nuovo Editor Promo!</strong><br>
                                 Crea card professionali in pochi click con anteprima live, upload immagini automatico e landing page personalizzata per condivisione social.
                             </p>
