feat: add intro modal - Come funziona CDM86 (7 step passaparola + referral)

--- a/public/promotions.html
+++ b/public/promotions.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="/assets/css/promotions.css">
     <link rel="stylesheet" href="/assets/css/filters.css">
     <link rel="stylesheet" href="/assets/css/animations.css">
+    <link rel="stylesheet" href="/assets/css/intro-modal.css">
     <link rel="stylesheet" href="/assets/css/auth-modal.css">
     <link rel="stylesheet" href="/assets/css/login-modal.css">
     <link rel="stylesheet" href="/assets/css/promo-modal.css">
@@ -2076,5 +2077,8 @@
             }
         }
     </script>
+
+    <!-- Intro Modal - Come funziona CDM86 -->
+    <script src="/assets/js/intro-modal.js"></script>
 </body>
 </html>
