--- a/public/promotions.html
+++ b/public/promotions.html
@@ -2080,5 +2080,36 @@
 
     <!-- Intro Modal - Come funziona CDM86 -->
     <script src="/assets/js/intro-modal.js"></script>
+
+    <!-- Bottone fisso "Come funziona?" -->
+    <style>
+      .cdm86-help-btn {
+        position: fixed;
+        bottom: 24px;
+        left: 24px;
+        z-index: 9999;
+        background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
+        color: white;
+        border: none;
+        border-radius: 50px;
+        padding: 10px 18px;
+        font-size: 13px;
+        font-weight: 700;
+        cursor: pointer;
+        box-shadow: 0 4px 18px rgba(99,102,241,0.45);
+        display: flex;
+        align-items: center;
+        gap: 7px;
+        transition: all 0.25s;
+        letter-spacing: 0.2px;
+      }
+      .cdm86-help-btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 8px 24px rgba(99,102,241,0.55);
+      }
+    </style>
+    <button class="cdm86-help-btn" onclick="CDM86Intro.show()" title="Scopri come funziona CDM86">
+      ❓ Come funziona?
+    </button>
 </body>
 </html>
