--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="assets/css/promotions.css">
     <link rel="stylesheet" href="assets/css/animations.css">
     <link rel="stylesheet" href="assets/css/login-modal.css">
+    <link rel="stylesheet" href="assets/css/intro-modal.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
@@ -1183,5 +1184,38 @@
         });
     </script>
     <!-- Force redeploy: Sun Jan 18 13:55:00 CET 2026 -->
+
+    <!-- Intro Modal - Come funziona CDM86 -->
+    <script src="assets/js/intro-modal.js"></script>
+
+    <!-- Bottone fisso "Come funziona?" -->
+    <style>
+      .cdm86-help-btn {
+        position: fixed;
+        bottom: 24px;
+        left: 24px;
+        z-index: 9999;
+        background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
+        color: white;
+        border: none;
+        border-radius: 50px;
+        padding: 10px 18px;
+        font-size: 13px;
+        font-weight: 700;
+        cursor: pointer;
+        box-shadow: 0 4px 18px rgba(99,102,241,0.45);
+        display: flex;
+        align-items: center;
+        gap: 7px;
+        transition: all 0.25s;
+      }
+      .cdm86-help-btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 8px 24px rgba(99,102,241,0.55);
+      }
+    </style>
+    <button class="cdm86-help-btn" onclick="CDM86Intro.show()" title="Scopri come funziona CDM86">
+      ❓ Come funziona?
+    </button>
 </body>
 </html>
