--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -995,23 +995,6 @@
             <div class="section hidden" id="company-management-section">
                 <h3>🏪 Gestione Azienda</h3>
                 
-                <!-- Card Promozione -->
-                <div class="company-card">
-                    <div class="company-card-header">
-                        <div>
-                            <h4>📣 Card Promozione</h4>
-                            <p class="company-card-description">Crea la card che apparirà nella homepage per attirare clienti</p>
-                        </div>
-                        <div id="card-status-badge"></div>
-                    </div>
-                    <div class="company-card-body">
-                        <div id="card-preview"></div>
-                        <button class="btn-primary" id="btn-card-editor" onclick="openCardEditor()">
-                            <i class="fas fa-plus"></i> Crea Card
-                        </button>
-                    </div>
-                </div>
-
                 <!-- Landing Page -->
                 <div class="company-card">
                     <div class="company-card-header">
@@ -1039,6 +1022,9 @@
                         <div style="display: flex; gap: 10px;">
                             <button class="btn-success" onclick="window.location.href='/public/promo-creator.html'">
                                 <i class="fas fa-magic"></i> Crea Promo Card
+                            </button>
+                            <button class="btn-success" id="btn-landing-editor-2" onclick="window.location.href='/public/landing-builder.html'" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+                                <i class="fas fa-plus"></i> Crea Landing Page
                             </button>
                         </div>
                     </div>
