fix: redirect automatico alla dashboard dopo pubblicazione promo/landing

--- a/public/promo-creator.html
+++ b/public/promo-creator.html
@@ -672,7 +672,7 @@
 
         function closeModal() {
             document.getElementById('successModal').classList.remove('active');
-            resetForm();
+            window.location.href = '/public/dashboard.html';
         }
     </script>
 </body>
